--- a/src/style/common_h5.css
+++ b/src/style/common_h5.css
@@ -362,3 +362,9 @@ textarea::-ms-input-placeholder {color: #eee;}
 .game_resave_dialog .resave_input{width:calc(100% - 100rpx); margin-left: 30rpx; background: #f8f8f8; border-radius: 10rpx; padding: 20rpx; font-size: 26rpx; height: 200rpx; line-height: 36rpx;}
 .game_resave_dialog p{width: 100%; margin-top: 30rpx;}
 .game_resave_dialog a{width: 50%; float: left; height: 80rpx; font-size: 15px; line-height: 80rpx; text-align: center; display: inline-block; border-top: 1rpx solid #eee;}
+
+/*mall-淘宝管理*/
+.mall_div{width: 100%;}
+.mall_div .name_input{width:100%; border: 1rpx solid #e8e8e8; background: #f5f5f5; padding: 0 30rpx; height: 100rpx; line-height: 100rpx; font-size: 32rpx; border-radius: 18rpx; margin-bottom: 40rpx;}
+.mall_div .name_textarea{width:100%; border: 1rpx solid #e8e8e8; background: #f5f5f5; padding: 30rpx; height: 300rpx; line-height: 50rpx; font-size: 32rpx; border-radius: 18rpx; margin-bottom: 40rpx;}
+.mall_div .a_submit{background: #00a7ff; border-radius: 18rpx; color: #fff; font-size: 30rpx; display: inline-block; text-align: center; padding: 0 30rpx; min-width: 200rpx; height: 100rpx; line-height: 100rpx;}
