--- a/src/style/common_h5.css
+++ b/src/style/common_h5.css
@@ -364,7 +364,9 @@ textarea::-ms-input-placeholder {color: #eee;}
 .game_resave_dialog a{width: 50%; float: left; height: 80rpx; font-size: 15px; line-height: 80rpx; text-align: center; display: inline-block; border-top: 1rpx solid #eee;}
 
 /*mall-淘宝管理*/
-.mall_div{width: 100%;}
-.mall_div .name_input{width:100%; border: 1rpx solid #e8e8e8; background: #f5f5f5; padding: 0 30rpx; height: 100rpx; line-height: 100rpx; font-size: 32rpx; border-radius: 18rpx; margin-bottom: 40rpx;}
-.mall_div .name_textarea{width:100%; border: 1rpx solid #e8e8e8; background: #f5f5f5; padding: 30rpx; height: 300rpx; line-height: 50rpx; font-size: 32rpx; border-radius: 18rpx; margin-bottom: 40rpx;}
-.mall_div .a_submit{background: #00a7ff; border-radius: 18rpx; color: #fff; font-size: 30rpx; display: inline-block; text-align: center; padding: 0 30rpx; min-width: 200rpx; height: 100rpx; line-height: 100rpx;}
+.mall_div{width: 100%; background: #fff; margin: 0 auto; padding: 15px; position: fixed; top: 0; left:0; z-index: 10;-moz-box-shadow: 1px 1px 10px -2px #c1c1c1;-webkit-box-shadow: 1px 1px 10px -2px #c1c1c1;box-shadow: 1px 1px 10px -2px #c1c1c1;}
+.mall_div .name_input{width:calc(100% - 60px); border: 1rpx solid #e8e8e8; background: #f5f5f5; padding: 0 30rpx; height: 100rpx; line-height: 100rpx; font-size: 32rpx; border-radius: 18rpx; margin-bottom: 40rpx;}
+.mall_div .name_textarea{width:calc(100% - 60px); border: 1rpx solid #e8e8e8; background: #f5f5f5; padding: 30rpx; height: 300rpx; line-height: 50rpx; font-size: 32rpx; border-radius: 18rpx; margin-bottom: 40rpx;}
+.mall_div .a_submit{background: #00a7ff; cursor: pointer; border-radius: 18rpx; color: #fff; font-size: 30rpx; display: inline-block; text-align: center; padding: 0 30rpx; min-width: 200rpx; height: 100rpx; line-height: 100rpx;}
+.mall_div .a_cancel{background: #eee; cursor: pointer; border-radius: 18rpx; color: #666; font-size: 30rpx; display: inline-block; text-align: center; padding: 0 30rpx; min-width: 200rpx; height: 100rpx; line-height: 100rpx;}
+.mall_addbtn{background: #ffa622; color: #fff; font-size: 15px; text-align: center; width: 60px; height: 60px; line-height: 60px; border-radius: 60px; display: inline-block; cursor: pointer; position: fixed; z-index: 1; bottom: 15px; right: 15px;-moz-box-shadow: 2px 2px 5px #c1c1c1;-webkit-box-shadow: 2px 2px 5px #c1c1c1;box-shadow: 2px 2px 5px #c1c1c1;}
