--- a/src/style/common_h5.css
+++ b/src/style/common_h5.css
@@ -368,9 +368,10 @@ textarea::-ms-input-placeholder {color: #eee;}
 .no1_yunbook ul li:hover{-moz-box-shadow: 1px 1px 10px -2px #c1c1c1;-webkit-box-shadow: 1px 1px 10px -2px #c1c1c1;box-shadow: 1px 1px 10px -2px #c1c1c1; border-radius:10rpx;}
 .no1_yunbook ul li .b_title{font-size: 15px; font-weight: bold; display: inline-block; width: 100%;}
 .no1_yunbook ul li .b_div{width: 100%; display: inline-block; margin-top: 5px;}
-.no1_yunbook ul li .b_div img{float: left; width: 50px; height: 62px; display: inline-block; border-radius: 3px;}
-.no1_yunbook ul li .b_div div{float: left; width: calc(100% - 70px); padding: 0 10px;}
-.no1_yunbook ul li .b_div div .b_text{font-size: 13px;}
+/* .no1_yunbook ul li .b_div img{float: left; width: 50px; height: 62px; display: inline-block; border-radius: 3px;} */
+.no1_yunbook ul li .b_div img{float: left; width: 60px; height: 60px; display: inline-block; border-radius: 3px;}
+.no1_yunbook ul li .b_div div{float: left; width: calc(100% - 80px); padding: 0 10px;}
+.no1_yunbook ul li .b_div div .b_text{font-size: 14px;}
 .search_div{width: calc(100% - 30px); padding: 15px; display: inline-block; position: relative;}
 .search_div .search_input{width: calc(100% - 55px); padding: 0 15px 0 40px; display: inline-block; background: #f5f5f5 url(./static/ico1.png) left 15px center no-repeat; background-size: 20px; font-size: 14px; height: 45px; line-height: 45px; border-radius: 45px;}
 .search_div .search_clear{background: url(./static/ico_clear.png) center center no-repeat; width: 45px; height: 45px; background-size: 20px; display: inline-block; position:absolute; right: 15px;}
