--- a/src/style/common_h5.css
+++ b/src/style/common_h5.css
@@ -376,3 +376,5 @@ textarea::-ms-input-placeholder {color: #eee;}
 .search_div{width: calc(100% - 30px); padding: 15px; display: inline-block; position: relative;}
 .search_div .search_input{width: calc(100% - 55px); padding: 0 15px 0 40px; display: inline-block; background: #f5f5f5 url(./static/ico1.png) left 15px center no-repeat; background-size: 20px; font-size: 14px; height: 45px; line-height: 45px; border-radius: 45px;}
 .search_div .search_clear{background: url(./static/ico_clear.png) center center no-repeat; width: 45px; height: 45px; background-size: 20px; display: inline-block; position:absolute; right: 15px;}
+
+.home{background: url(./static/allin_home2.png) center center no-repeat; width: 50px; height: 50px; display: inline-block; background-size: 40px; position: fixed; right: 15px; bottom: 50px; border-radius: 19px; -moz-box-shadow: 0 0px 10px -1px #ccc;-webkit-box-shadow: 0 0px 10px -1px #ccc;box-shadow: 0 0px 10px -1px #ccc;}
